MouseArea: don't get stuck in doubleClick if handler caused ungrab

The bug scenario went like this:
1) QQuickMouseArea::mouseDoubleClickEvent() emits doubleClicked
2) onDoubleClicked in QML hid the MouseArea somehow
3) QQuickMouseArea::ungrabMouse() is called; it sets
   d->pressed = Qt::NoButton and d->doubleClick = false (and others)
4) eventually we get back to the continuation of mouseDoubleClickEvent()
   which sets d->doubleClick back to true
5) mouse release: this MouseArea is not involved (no grab anymore)
6) next mouse press: QQuickMouseArea::setPressed() has
   if (!d->doubleClick)
       emit pressed(&me);
   pressed() is not emitted because of leftover state

So either we need to avoid setting d->doubleClick to true if d->pressed
has been set to Qt::NoButton in QQuickMouseArea::ungrabMouse(); or else
we should reorder the statements in mouseDoubleClickEvent() to set
d->doubleClick before emitting doubleClicked, so that it will not be
overridden after the QML handler is called. This patch takes the first
approach.

Fixes: QTBUG-35995
Fixes: QTBUG-102158
Change-Id: Ibe5c9bfbc9c7a70772dd5ebfbc9ce401c6c226d3
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 089c3b15b95fc0ddbf2385378f96702a999771c8)