tests/auto/quick/qquickmousearea/tst_qquickmousearea.cpp
@@ -161,6 +161,7 @@ private slots:
     void nestedEventDelivery();
     void settingHiddenInPressUngrabs();
     void containsMouseAndVisibility();
+    void doubleClickToHide();
 
 private:
     int startDragDistance() const {
@@ -2498,6 +2499,33 @@ void tst_QQuickMouseArea::containsMouseAndVisibility()
     mouseArea->setVisible(true);
     QVERIFY(mouseArea->isVisible());
     QVERIFY(!mouseArea->hovered());
+}
+
+// QTBUG-35995 and QTBUG-102158
+void tst_QQuickMouseArea::doubleClickToHide()
+{
+    QQuickView window;
+    QByteArray errorMessage;
+    QVERIFY2(QQuickTest::initView(window, testFileUrl("doubleClickToHide.qml"), true, &errorMessage), errorMessage.constData());
+    window.show();
+    window.requestActivate();
+    QVERIFY(QTest::qWaitForWindowExposed(&window));
+
+    QQuickMouseArea *mouseArea = window.rootObject()->findChild<QQuickMouseArea *>();
+    QVERIFY(mouseArea);
+
+    QTest::mouseDClick(&window, Qt::LeftButton, Qt::NoModifier, {10, 10});
+
+    QCOMPARE(window.rootObject()->property("clicked").toInt(), 1);
+    QCOMPARE(window.rootObject()->property("doubleClicked").toInt(), 1);
+    QCOMPARE(mouseArea->isVisible(), false);
+    QCOMPARE(mouseArea->pressed(), false);
+    QCOMPARE(mouseArea->pressedButtons(), Qt::NoButton);
+
+    mouseArea->setVisible(true);
+
+    QTest::mouseClick(&window, Qt::LeftButton, Qt::NoModifier, {10, 10});
+    QCOMPARE(window.rootObject()->property("clicked").toInt(), 2);
 }
 
 QTEST_MAIN(tst_QQuickMouseArea)
